hphp/hack/test/typecheck/typedefs_generics_arity3.php.exp
File "typedefs_generics_arity3.php", line 5, characters 10-10:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
File "typedefs_generics_arity3.php", line 3, characters 6-6:
Definition is here
